sorted/tests/20-pattern-unsigned-int-literal.stderr
error: 1 should sort before 340_282_366_920_938_463_463_374_607_431_768_211_455
  --> tests/20-pattern-unsigned-int-literal.rs:11:9
   |
11 |         1 => println!("1"),
   |         ^
