sorted/tests/20-pattern-unsigned-int-literal.rs
#[sorted::check]
fn main() {
    let x = 15u128;

    #[sorted]
    match x {
        0 => println!("0"),
        340_282_366_920_938_463_463_374_607_431_768_211_455 => {
            println!("340_282_366_920_938_463_463_374_607_431_768_211_455")
        }
        1 => println!("1"),
        _ => println!("other"),
    }
}
